--- a/frontend/packages/quiz-creator/src/stylesheets/question-selector.css
+++ b/frontend/packages/quiz-creator/src/stylesheets/question-selector.css
@@ -1,24 +1,34 @@
 .container-fluid.selector {
-    padding-top: 0;
-    padding-left: .25rem;
-    padding-right: .25rem;
-
+    padding: 0 .25rem 0.5rem;
 }
 
 .card.card-dark {
     background-color: #1f1f1f;
 }
 
-.card.card-format {
-    height: 100%;
+.container-fluid.question-deck {
+    overflow-x: scroll;
+    overflow-y: hidden;
+    display: flex;
+    padding: 0.5rem 0 1rem;
 }
 
-.container-fluid.question-deck .question-card {
-    min-height: 15vh;
-    height: 15vh;
-    min-width: calc((15vh / 9) * 16);
-    max-height: 20vh;
-    max-width: 15vw;
+.card.question-card {
+    height: calc((0.25 * (100vh - 60px)) - 2rem);
+    min-width: calc((16 / 9) * ((0.25 * (100vh - 60px)) - 2rem)); /* Exact measurements used to achieve aspect ratio */
+    max-width: calc((16 / 9) * ((0.25 * (100vh - 60px)) - 2rem)); /* Exact measurements used to achieve aspect ratio */
+    margin-right: 0.5rem;
+
+    color: white;
+    font-weight: bold;
+    font-size: 15px;
+}
+
+.card.add-question-card {
+    height: calc((0.25 * (100vh - 60px)) - 2rem);
+    min-width: calc((16 / 9) * ((0.25 * (100vh - 60px)) - 2rem)); /* Exact measurements used to achieve aspect ratio */
+    max-width: calc((16 / 9) * ((0.25 * (100vh - 60px)) - 2rem)); /* Exact measurements used to achieve aspect ratio */
+
     color: white;
     font-weight: bold;
     font-size: 15px;
@@ -44,7 +54,7 @@
     font-size: 12px;
 }
 
-.container-fluid.question-deck .card.question-card.question-card-active {
+.card.question-card.question-card-active {
     border: 2px solid white;
 }
 
